--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -16,8 +16,15 @@ jobs:
         working-directory: AWS EC2 t2.micro
 
     steps:
-      - name: Checkout repo
+      - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1  # cambia esto si usas otra región
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
@@ -34,5 +41,5 @@ jobs:
         run: terraform plan
 
       # - name: Terraform Apply
-      #   if: github.ref == 'refs/heads/main'
       #   run: terraform apply -auto-approve
+      #   if: github.ref == 'refs/heads/main'
